# wotlk-chat-translator

./: .gitignore  Cargo.toml  README.md
assets/: glossary.json
docs/: offsets.md
src/: chat.rs  clipboard.rs  config.rs  glossary.rs  main.rs  memory.rs  offsets.rs  player.rs  translation.rs  wtf_parser.rs
