[package]
name = "wotlk-chat-translator"
version = "0.1.0"
edition = "2021"

[dependencies]
imgui = "0.12"
imgui-glow-renderer = "0.13"
imgui-winit-support = "0.13"
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
glow = "0.14"
raw-window-handle = "0.6"
sysinfo = "0.37"
log = "0.4"
fern = "0.7"
humantime = "2"
chrono = "0.4"
arboard = "3.4"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
deepl = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_Foundation", "Win32_System_Memory"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
